--- a/src/components/containers/sk-app/template.html
+++ b/src/components/containers/sk-app/template.html
@@ -1,8 +1,8 @@
 <section class="Welcome">
   <img class="SKLogo" draggable="false" src="assets/AnimatedSkeleton.svg" alt="">
-  <h1 class="Title">Web Components — Now.</h1>
+  <h1 class="Title">Sweet Systems</h1>
   <p>
-    Take the future and start building your progressive web apps with Polymer Skeleton, the most advanced Polymer starter kit.
+   Start building your progressive web apps with Polymer and web componenets.
   </p>
 
   <sk-button on-click="startTour">Take a tour</sk-button>
